# page_analyzer

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  mybuild  pyproject.toml
.github/workflows/: check.yml  project-check.yml
page_analyzer/: __init__.py  app.py  db.py  db_utils.py  html_parser.py  http_utils.py  utilits.py  validator.py
page_analyzer/templates/: base.html  index.html  layout.html  url_page.html  urls_page.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  header.html  messages.html  nav.html  scripts.html
page_analyzer/templates/urls/: detail.html  list.html
tests/: test_page_analyzer.py
