[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = Project page analyzer"
authors = ["pavelkoA <pavelko88@mail.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
validators = "^0.28.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.2.1"
fake-useragent = "^1.5.1"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
playwright = "^1.43.0"
pytest-playwright = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
